--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "dependencies": {
+    "bikram-sambat-js": "^1.0.2",
     "cookie-parser": "^1.4.7",
     "csvtojson": "^2.0.10",
     "docx-pdf": "^0.0.1",
